# dataflight

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/: stdimgui.h
dependencies/include/glm/detail/: type_vec1.hpp
lib/: glad.c
lib/include/GLFW/: glfw3.h
lib/include/ImGuiFileDialog/: ImGuiFileDialog.cpp
lib/include/glad/: glad.h
lib/include/glm/detail/: type_quat.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
lib/include/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_opengl3.cpp
preprocessing/: 00841599999.csv
res/data/: spain_climate_clean.csv
res/shaders/: basic.frag  basic.vert  rainbow.frag  rainbow.vert
res/shaders/axes/: dashed.frag  solid.vert
res/shaders/data/: basic.vert  rainbow.frag  rainbow.vert
res/shaders/postprocessing/: fullscreenQuad.frag  fullscreenQuad.vert
resources/shaders/: basic.frag  basic.vert  heatmap.frag  heatmap.vert  rainbow.vert
src/: macros.h  main.cpp  typedefs.h
src/data/: Axes.cpp  Axes.h  CSVLoader.cpp  CSVLoader.h  DataRepresentation.cpp  DataRepresentation.h
src/debug/: DataGen.cpp  DataGen.h
src/geometry/: Mesh.cpp  Mesh.h  MeshGeneration.cpp  MeshGeneration.h  Transform.cpp  Transform.h
src/render/: DataCamera.cpp  DataCamera.h  Framebuffer.cpp  Framebuffer.h  FramebufferDrawable.cpp  FramebufferDrawable.h  FramebufferPostprocessing.cpp  FramebufferPostprocessing.h  IDrawable.h  Shader.cpp  Shader.h
src/render/postprocessing/: FXAAFilter.cpp  FXAAFilter.h  IPostprocessingFilter.h  InvertFilter.cpp  InvertFilter.h
src/shaders/axes/: dashed.frag  dashed.vert  main.geom  main.vert  solid.frag  solid.vert
src/shaders/data/: basic.frag  basic.vert  rainbow.frag  rainbow.vert
src/shaders/postprocessing/: fullscreenQuad.frag  fullscreenQuad.vert  fxaa.frag  invert.frag
src/ui/: DataLoadingWindow.cpp  DataLoadingWindow.h  DataSettingsWindow.cpp  DataSettingsWindow.h  IUiWindow.h  UiContext.cpp  UiContext.h  UiWindow.cpp  UiWindow.h  VisualizationSettingsWindow.cpp  VisualizationSettingsWindow.h
src/util/: HashID.cpp  HashID.h  StringUtil.cpp  StringUtil.h
src/window/: CallbackInterfaces.h  ICursorPosCallback.h  IDrawable.h  IFrameCallback.h  Window.cpp  Window.h
